# fast-alpr-ncnn

./: .gitignore  CMakeLists.txt  README.md  fast_alpr_wasm.js  fast_alpr_wasm.wasm  main.cpp
.github/workflows/: ncnn-release.yml
android/: .gitignore  build_android.sh
android/sample/src/main/: AndroidManifest.xml
android/sample/src/main/java/com/agusibrahim/fastalpr/sample/: LiveCameraActivity.java  MainActivity.java  OverlayView.java
android/sample/src/main/res/layout/: activity_live_camera.xml  activity_main.xml
android/sample/src/main/res/values/: strings.xml
models/: ocr.param  yolo.param
wasm/: .gitignore  CMakeLists.txt  build_wasm.sh  fast_alpr_wasm.cpp  index.html
